test(quarkus-dbaas-client): close the new-code coverage gaps
Sonar's quality gate flagged 72.5% coverage on new code. Cover what the
provider tests missed: the mounted-secret providers' order(), the
null-DatabaseConfig role branch and the unimplemented property-level
lookup; the synthetic-response builder's metadata fallbacks (a new
dbaas-common test — the resolve/index logic itself is covered by
dbaas-client-base's own suite); and the mongo provider-chain error
branches (database without connection properties, chain exhausted).

Also fix the two Sonar findings: Stream.toList() instead of
collect(Collectors.toList()) in MongoClientCreationImpl, and constructor
injection in DbaaSMongoLogicalDbProvider.